--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.3",
     "mysql2": "^3.11.0",
     "next": "14.2.5",
+    "node.js": "^0.0.1-security",
     "react": "^18",
     "react-dom": "^18",
     "xlsx": "^0.18.5"
