--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/datatables.net": "^1.10.28",
     "axios": "^1.7.3",
+    "datatables.net": "^2.1.7",
+    "datatables.net-dt": "^2.1.7",
+    "jquery": "^3.7.1",
     "mysql2": "^3.11.0",
     "next": "14.2.5",
     "node.js": "^0.0.1-security",
     "react": "^18",
     "react-dom": "^18",
+    "react-flatpickr": "^3.10.13",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.30",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-flatpickr": "^3.8.11",
     "typescript": "^5"
   }
 }
