--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "datatables.net": "^2.1.7",
     "datatables.net-dt": "^2.1.7",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.1",
     "mysql2": "^3.11.0",
     "next": "14.2.5",
     "node.js": "^0.0.1-security",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.30",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
